# Model_Context_Protocol

./: README.md  mcp_client.py  mcp_server.py  pyproject.toml
